--- a/src/content/docs/kunskap/en-router-i-javascript.mdx
+++ b/src/content/docs/kunskap/en-router-i-javascript.mdx
@@ -2,50 +2,37 @@
 title: En router i JavaScript
 author: efo
 revision:
-    "2023-03-15": "(A, efo) Första utgåvan för webapp-v5."
+  "2023-03-15": "(A, efo) Första utgåvan för webapp-v5."
 ---
-
 
 I denna övningen tittar vi på hur vi kan använda en Web Component som bas för en router så vi har möjligheten att byta mellan olika vyer i vår applikation utan att ladda om sidan.
 
-
-
-Förkunskaper
---------------------------------------
+## Förkunskaper
 
 Du har gjort en fork av webapp-lager repot och gjort övningarna [Typografi i mobila enheter](/kunskap/typografi-i-mobila-enheter) och [Knappar för mobilen](/kunskap/knappar-for-mobilen).
 
-
-
-Exempelkod
---------------------------------------
+## Exempelkod
 
 Om du skriver nedanstående kod i ditt webapp-lager repo kan du återanvända koden i uppgiften "[Lager appen del 1](../uppgift/lager-appen-del-1)".
 
-
-
-Förutsättningar för vår router
---------------------------------------
+## Förutsättningar för vår router
 
 Vår router ska göra så att vi kan byta mellan olika vyer i vår applikation och göra detta utan att vi laddar om själva webbplatsen. Vi kommer använda `#`-delen av en url för att hantera vilken route vi är på. I `location` objektet i webbläsaren finns det massa med godsaker så innan vi drar igång kan det vara bra att titta på [dokumentationen](https://developer.mozilla.org/en-US/docs/Web/API/Location).
 
-
-
-En router komponent
---------------------------------------
+## En router komponent
 
 Vi börjar med att skapa filen `router.js` som kommer innehålla komponenten som hanterar routingen i vår applikation. Vi skapar detta som en "vanlig" web component. Jag lägger till lite kod så att vi ser att allting fungerar när vi lägger till den i `main.js` och sedan i `index.html`.
 
 ```javascript
 export default class Router extends HTMLElement {
-    constructor() {
-        super()
-    }
+  constructor() {
+    super();
+  }
 
-    // connect component
-    connectedCallback() {
-        this.innerHTML = "router-outlet"
-    }
+  // connect component
+  connectedCallback() {
+    this.innerHTML = "router-outlet";
+  }
 }
 ```
 
@@ -53,90 +40,80 @@ I `main.js` definierar vi sedan ett `customElement` som vi ger namnet `router-ou
 
 ```javascript
 // router import
-import Router from "./router.js"
+import Router from "./router.js";
 
 // component imports
-import LagerTitle from "./components/lager-title.js"
-import ProductList from "./components/product-list.js"
-import SingleProduct from "./components/single-product.js"
+import LagerTitle from "./components/lager-title.js";
+import ProductList from "./components/product-list.js";
+import SingleProduct from "./components/single-product.js";
 
-customElements.define('router-outlet', Router)
+customElements.define("router-outlet", Router);
 
-customElements.define('lager-title', LagerTitle)
-customElements.define('product-list', ProductList)
-customElements.define('single-product', SingleProduct)
+customElements.define("lager-title", LagerTitle);
+customElements.define("product-list", ProductList);
+customElements.define("single-product", SingleProduct);
 ```
 
 I `index.html` tar vi bort `<product-list>` komponenten och har bara `<router-outlet></router-outlet>`.
 
-
 ```html
-<!doctype html>
+<!DOCTYPE html>
 <html lang="sv">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>Lager-Components</title>
 
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="src/main.js" defer></script>
-</head>
+  </head>
 
-<body>
-    <header class="header">
-        <lager-title name="Emil"></lager-title>
-    </header>
-    <main class="main">
-        <router-outlet></router-outlet>
-    </main>
-</body>
-
+  <body>
+    <router-outlet></router-outlet>
+  </body>
 </html>
 ```
 
 När vi kör igång med `npm start` och öppnar vår applikation ser vi bara texten **router-outlet** men nu vi är på gång.
 
-
-
-Definiera routes
---------------------------------------
+## Definiera routes
 
 Till en början väljer vi att definiera våra routes direkt i konstruktorn i `Router` klassen. Jag definierar även en variabel för att hålla koll på nuvarande route. Längre ner i koden kommer vi dela upp komponenter och vyer (views) i två olika kataloger. Vyer är _web components_ men kommer mer vara en samling av andra små komponenter som tillsammans bygger ihop hela vyer. Varje route definieras utifrån nyckeln i objektet och det vi skriver där är det vi vill ska stå i adress fältet när vi vill besöka den specifika vyn som vi specificerar under `view`-attributet. `name` kommer i ett senare skede användas för att visas som text i navigationen.
 
 ```javascript
 export default class Router extends HTMLElement {
-    constructor() {
-        super()
+  constructor() {
+    super();
 
-        this.currentRoute = ""
+    this.currentRoute = "";
 
-        this.allRoutes = {
-            "": {
-                view: "<products-view></products-view>",
-                name: "Lagerlista",
-            },
-            "packlist": {
-                view: "<packlist-view></packlist-view>",
-                name: "Plocklista",
-            }
-        }
-    }
+    this.allRoutes = {
+      "": {
+        view: "<products-view></products-view>",
+        name: "Lagerlista",
+      },
+      packlist: {
+        view: "<packlist-view></packlist-view>",
+        name: "Plocklista",
+      },
+    };
+  }
 
-    get routes() {
-        return this.allRoutes
-    }
+  get routes() {
+    return this.allRoutes;
+  }
 
-    // connect component
-    connectedCallback() {
-        this.innerHTML = "router-outlet"
-    }
+  // connect component
+  connectedCallback() {
+    this.innerHTML = "router-outlet";
+  }
 }
 ```
 
 I ovanstående kod definierade jag även den publika `getter`-metod `routes`. Det gör att vi på ett enkelt sätt kan hämta ut alla routes, både inuti `Router` klassen men även från de instanser vi skapar.
-
-
 
 ### Hantera ändringar i routes
 
@@ -146,52 +123,52 @@ Jag har valt att dela upp det i tre delar, man hade säkert kunnat lösa det med
 
 ```javascript
 export default class Router extends HTMLElement {
-    constructor() {
-        super()
+  constructor() {
+    super()
 
-        this.currentRoute = ""
+    this.currentRoute = ""
 
-        this.allRoutes = {
-            "": {
-                view: "<products-view></products-view>",
-                name: "Lagerlista",
-            },
-            "packlist": {
-                view: "<packlist-view></packlist-view>",
-                name: "Plocklista",
-            }
-        }
+    this.allRoutes = {
+      "": {
+        view: "<products-view></products-view>",
+        name: "Lagerlista",
+      },
+      packlist: {
+        view: "<packlist-view></packlist-view>",
+        name: "Plocklista",
+      },
     }
+  }
 
-    get routes() {
-        return this.allRoutes
-    }
+  get routes() {
+    return this.allRoutes
+  }
 
-    // connect component
-    connectedCallback() {
-        window.addEventListener('hashchange', () => {
-            this.resolveRoute()
-        })
+  // connect component
+  connectedCallback() {
+    window.addEventListener("hashchange", () => {
+      this.resolveRoute()
+    })
 
-        this.resolveRoute()
-    }
+    this.resolveRoute()
+  }
 
-    resolveRoute() {
-        this.currentRoute = location.hash.replace("#", "")
+  resolveRoute() {
+    this.currentRoute = location.hash.replace("#", "")
 
-        this.render()
-    }
+    this.render()
+  }
 
-    render() {
-        this.innerHTML = this.routes[this.currentRoute]?.view || "<not-found></not-found>"
-    }
+  render() {
+    this.innerHTML =
+      this.routes[this.currentRoute]?.view || "<not-found></not-found>"
+  }
 }
 ```
 
 
 
-Vyer att visa upp
---------------------------------------
+## Vyer att visa upp
 
 Låt oss då ta en titt på dessa vyer som vi vill visa upp när vi navigerar till en route. Jag väljer att skapa en katalog `views` så att jag håller isär rena komponenter och vyer som mer blir en samling av underliggande komponenter.
 
@@ -199,73 +176,98 @@ Nedan syns filen `src/views/products.js` som i sin tur renderar ut lagersaldo li
 
 ```javascript
 export default class ProductsView extends HTMLElement {
-    // connect component
-    connectedCallback() {
-        this.innerHTML =    `<header class="header">
-                                <lager-title title="Produkt lista"></lager-title>
-                             </header>
-                             <main class="main">
-                                <product-list></product-list>
-                             </main>
-                             `;
-    }
+  // connect component
+  connectedCallback() {
+    this.innerHTML = `<header class="header">
+                        <lager-title title="Produkt lista"></lager-title>
+                      </header>
+                      <main class="main">
+                        <product-list></product-list>
+                      </main>
+                      `
+  }
 }
 ```
 
 Se till att hålla vyerna ganska rena, så får logiken ligga i de enskilda komponenterna. Du bör utifrån detta exemplet lätta kunna skapa ytterligare vyer, till exempel den PlockLista vy som är uppgiften i detta kmom och som vi definierade i `this.allRoutes` i ovanstående `Router`-klass. Det kan vara smart att skapa den, även om den just nu bara innehåller en text så du ser att routern fungerar.
 
+Se även till att importera och definiera ett customElement i `main.js`, min fil ser ut enligt nedan vid detta läget.
 
+```javascript
+// router import
+import Router from "./router.js"
 
-Navigationen
---------------------------------------
+// views import
+import ProductsView from "./views/products-view.js"
+
+// component imports
+import LagerTitle from "./components/lager-title.js"
+import ProductList from "./components/product-list.js"
+import SingleProduct from "./components/single-product.js"
+
+// router defines
+customElements.define('router-outlet', Router)
+
+// views defines
+customElements.define('products-view', ProductsView)
+
+// component defines
+customElements.define('lager-title', LagerTitle)
+customElements.define('product-list', ProductList)
+customElements.define('single-product', SingleProduct)
+```
+
+## Navigationen
 
 För att vi på ett enkelt sätt kan navigera mellan olika vyer skapar vi även en navigations-komponent. Även denna lägga vi i roten i webapp-lager repot och vi lägger in den på precis samma sätt som `router-outlet`, både i `main.js` och i `index.html`.
 
 ```html
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>Lager-Components</title>
 
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <router-outlet></router-outlet>
     <navigation-outlet></navigation-outlet>
-</body>
+  </body>
 </html>
 ```
 
 Jag skapar då filen `navigation.js` med nedanstående klass i den filen. Här skapar vi en instans av `Router` och hämtar sedan ut de routes som finns. Sedan itererar vi över de och ritar ut menyn i ett `nav`-element.
 
 ```javascript
-import Router from "./router.js";
+import Router from "./router.js"
 
 export default class Navigation extends HTMLElement {
-    constructor() {
-        super();
+  constructor() {
+    super()
 
-        this.router = new Router();
+    this.router = new Router()
+  }
+
+  // connect component
+  connectedCallback() {
+    const routes = this.router.routes
+
+    let navigationLinks = ""
+
+    for (let path in routes) {
+      navigationLinks += `<a href='#${path}'>${routes[path].name}</a>`
     }
 
-    // connect component
-    connectedCallback() {
-        const routes = this.router.routes;
-
-        let navigationLinks = "";
-
-        for (let path in routes) {
-            navigationLinks += `<a href='#${path}'>${routes[path].name}</a>`;
-        }
-
-        this.innerHTML = `<nav>${navigationLinks}</nav>`;
-    }
+    this.innerHTML = `<nav>${navigationLinks}</nav>`
+  }
 }
 ```
-
 
 ### Styling av menyn
 
@@ -279,10 +281,10 @@ Vi börjar med att placera menyn längst ner på skärmen och samtidigt fylla ut
 
 ```css
 .bottom-nav {
-    position: fixed;
-    bottom: 0;
-    overflow: hidden;
-    width: 100%;
+  position: fixed;
+  bottom: 0;
+  overflow: hidden;
+  width: 100%;
 }
 ```
 
@@ -290,21 +292,18 @@ Vi sätter positionen med värdet `fixed` och att vi vill ha den längst ner på
 
 ```css
 .bottom-nav {
-    position: fixed;
-    bottom: 0;
-    overflow: hidden;
-    width: 100%;
-    display: flex;
-    flex-flow: row | nowrap;
-    justify-content: space-around;
+  position: fixed;
+  bottom: 0;
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  flex-flow: row | nowrap;
+  justify-content: space-around;
 }
 ```
 
-Vi anger att vår meny ska använda sig av flexbox med attributet `display: flex;`. Attributet `flex-flow: row | nowrap;` är kort notation för  `flex-direction: row;` och `flex-wrap: nowrap;` och vi vill här att länkarna ska lägga sig på en rad och med attributet `justify-content: space-around;` fördelar vi ut länkarna jämt i menyn. I exemplet nedan ser vi hur det kan se när man har lagt sin menyn längst ner på skärmen. Vi kommer använda flexbox under kursens gång så oroa dig inte om du inte känner att du har fullt koll på flexbox, vi kommer bygga vidare på flexbox i kursen.
+Vi anger att vår meny ska använda sig av flexbox med attributet `display: flex;`. Attributet `flex-flow: row | nowrap;` är kort notation för `flex-direction: row;` och `flex-wrap: nowrap;` och vi vill här att länkarna ska lägga sig på en rad och med attributet `justify-content: space-around;` fördelar vi ut länkarna jämt i menyn. I exemplet nedan ser vi hur det kan se när man har lagt sin menyn längst ner på skärmen. Vi kommer använda flexbox under kursens gång så oroa dig inte om du inte känner att du har fullt koll på flexbox, vi kommer bygga vidare på flexbox i kursen.
 
-
-
-Avslutningsvis
---------------------------------------
+## Avslutningsvis
 
 Vi har i denna övning tittat på hur vi kan skapa en router som enkelt låter oss navigera mellan olika vyer i vår applikation.
