Added done with kmom01, yellow box will disappear tomorrow

--- a/src/content/docs/kmom/kmom01.mdx
+++ b/src/content/docs/kmom/kmom01.mdx
@@ -19,7 +19,7 @@ Vi har i tidigare kurser sett hur vi man kan skapa applikationer i webbläsaren 
 
 Som ett första steg ska vi börja med en löpande uppgift där vi i detta kursmoment skapar början till en lagerhanteringsapp. Nedan finns en liten video som visar hur det kan se ut när man är klar med Lager appen del 1.
 
-<YouTube posterQuality="max" id="DxGlC-MUwJo" />
+<YouTube posterQuality="max" id="Ke_xCck7SQ0" />
 
 
 
