--- a/src/content/docs/kmom/kmom01.mdx
+++ b/src/content/docs/kmom/kmom01.mdx
@@ -9,9 +9,6 @@ revision:
 
 import { YouTube } from 'astro-embed';
 
-import { Aside } from '@astrojs/starlight/components';
-
-<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
 Tanken är att komma igång med utveckling av mobila applikationer. De mobila applikationerna utvecklar vi med tekniker baserade på HTML, CSS och JavaScript. Vi ser hur vi kan utnyttja dessa tekniker för att ändra innehållet utan att ladda om applikationen. Som ett första steg så läser vi på om grunderna och börjar så smått med det löpande projektet för alla sex kursmoment.
 
@@ -48,7 +45,7 @@ Acceptera sedan inbjudan och använd SAML SSO inloggning för att knyta ditt Git
 
 I nedanstående video visar Emil hur du kommer igång med kursen. Om du föredrar text kan du hoppa över videon, men den är starkt rekommenderat.
 
-<YouTube posterQuality="max" id="47fDUCRsVf0" />
+<YouTube posterQuality="max" id="_EhcqZJNH2w" />
 
 Du börjar kursen genom att skapa en `webapp` katalog i din `dbwebb-kurser`-katalog. Du kan sedan klona `example`-repot ([dbwebb-webapp/webapp-example](https://github.com/dbwebb-webapp/webapp-example)) till `webapp`-katalogen så du har tillgång till kursens exempel-kod.
 
