--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,8 +8,6 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 import { YouTube } from 'astro-embed';
 import { Aside } from '@astrojs/starlight/components';
 
-<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursen så länge denna gula rutan finns.</Aside>
-
 
 Välkommen till kursen Webbapplikationer för mobila enheter.
 
@@ -19,7 +17,7 @@ Välkommen till kursen Webbapplikationer för mobila enheter.
 
 <CardGrid>
 <LinkCard
-  title="⚠️ kmom01 - En router"
+  title="kmom01 - En router"
   href="/kmom/kmom01"
   description="Vi startar igång kursen genom att repetera webbkomponenter och skapa en router för navigation utan att ladda om HTML-sidan."
 />
