--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -25,7 +25,7 @@ Välkommen till kursen Webbapplikationer för mobila enheter.
 <LinkCard
   title="⚠️ kmom02 - Formulär och CRUD"
   href="/kmom/kmom02"
-  description="Vi tar en titt på "
+  description="Vi tar en titt på hur vi kan skapa bra formulär på mobila enheter."
 />
 
 <LinkCard
