--- a/src/content/docs/kmom/kmom02.mdx
+++ b/src/content/docs/kmom/kmom02.mdx
@@ -23,7 +23,7 @@ Vi fortsätter med vår applikation från kmom01 och tittar på hur vi kan anvä
 
 Nedan finns en liten video som visar hur det kan se ut när man är klar med Lager appen del 2.
 
-<YouTube posterQuality="max" id="QAvD-vRgSaU" />
+<YouTube posterQuality="max" id="TMVxtYVeFGQ" />
 
 
 
@@ -48,16 +48,12 @@ Veckans genomgång
 
 Emil har genomgånger måndagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
-<YouTube posterQuality="max" id="BdN_-4ZsG0k" />
-
 
 
 Veckans föreläsning 
 ---------------------------------
 
-Emil har föreläsningar onsdagar kl 10:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
-
-<YouTube posterQuality="max" id="2lDT4OBwm6Q" />
+Emil och Mathias har föreläsningar onsdagar kl 10:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
 
 
 
@@ -76,6 +72,8 @@ Läs följande artiklar för att få bakgrunden till övningarna.
 
 1. Till mobil operativsystemen [iOS](https://developer.apple.com/design/) och [Android](https://developer.android.com/design/) ger Apple respektive Google ut guidelines för hur man ska designa på de två plattformarna. Detta är ett viktigt verktyg inte minst när vi designar med hjälp av HTML och CSS istället för de inbyggda native elementen. Skumma igenom de två guides och spara de som bokmärken.
 
+1. Läs och använd artiklarna [Website Forms Usability: Top 10 Recommendations](https://www.nngroup.com/articles/web-form-design/) och [A Checklist for Registration and Login Forms on Mobile](https://www.nngroup.com/articles/checklist-registration-login/) för att skapa användbara formulär.
+
 
 
 Övningar & Uppgifter 
@@ -89,9 +87,7 @@ Läs följande artiklar för att få bakgrunden till övningarna.
 
 Gör följande övningar för att träna inför uppgifterna.
 
-1. Gör övningen "[Knappar för mobilen](/kunskap/knappar-for-mobilen)". Spara eventuella testfiler i ditt webapp-lager repo.
-
-1. Gör övningen "[En router i JavaScript](/kunskap/en-router-i-javascript)". Spara med fördel koden i ditt webapp-lager repo.
+1. Läs igenom artikeln och gör övningarna i "[Ett mobilanpassad formulär](/kunskap/ett-mobilanpassad-formular)". Skriv koden i webapp-lager repot för återanvändning i uppgiften.
 
 
 
@@ -110,8 +106,7 @@ Resultat & Redovisning
 
 Se till att följande frågor besvaras i redovisningstexten i din inlämning.
 
-* Fick du till en bra struktur i din CSS/SASS kod?
-* Vilka fördelar ser du med att kombinera _web components_ med en router i JavaScript?
-* Vilka insikter fick du när du skummade igenom Apples och Androids design guidelines?
-* Valda du flat design eller ej för dina knappar? Varför?
+* Vilka faktorer spelar in när du ska designa ett formulär för mobila enheter?
+* Vad tyckte du om den inbyggda formulär validering i webbläsaren?
+* Vilka lärdomar gjorde du kring hantering av formulär i JavaScript?
 * Vilken är din TIL för detta kmom?
