--- a/src/content/docs/kmom/kmom02.mdx
+++ b/src/content/docs/kmom/kmom02.mdx
@@ -13,13 +13,8 @@ revision:
 ---
 
 import { YouTube } from 'astro-embed';
-import { Aside } from '@astrojs/starlight/components';
 
-<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
-
-Vi tar en titt på vilka begränsningar och utmaningar man står inför som användare av en mobil enhet. Vi bryter ut CSS koden från kmom01 till ett GUI komponentbaserad ramverk och lägger till fler GUI komponenter till vårt ramverk.
-
-Vi fortsätter med vår applikation från kmom01 och tittar på hur vi kan använda en router för att visa upp olika sidor utan att ladda om sidan.
+I detta kursmoment skapar vi lättanvända formulärfält med hjälp av HTML5 och kopplar ihop fälten i formulär som är lätta att använda på små skärmar där kontext och möjligheten att skriva snabbt och enkelt saknas. I vår applikation lägger vi till möjligheten att skapa data via formulär.
 
 Nedan finns en liten video som visar hur det kan se ut när man är klar med Lager appen del 2.
 
