Changed days and times + titles

--- a/src/content/docs/kmom/kmom03.mdx
+++ b/src/content/docs/kmom/kmom03.mdx
@@ -44,7 +44,7 @@ git checkout -b kmom03
 Veckans genomgång 
 ---------------------------------
 
-Emil har genomgånger måndagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
+Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
 <YouTube posterQuality="max" id="w-vjKU5tucg" />
 
@@ -53,7 +53,7 @@ Emil har genomgånger måndagar kl 13:15, efter genomgången uppdateras denna de
 Veckans föreläsning 
 ---------------------------------
 
-Emil har föreläsningar onsdagar kl 10:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
+Emil har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
 
 <YouTube posterQuality="max" id="sZDvUQbFnTk" />
 
