--- a/src/content/docs/kmom/kmom04.mdx
+++ b/src/content/docs/kmom/kmom04.mdx
@@ -49,12 +49,21 @@ git checkout -b kmom04
 
 
 
-Veckans genomgång & föreläsning
+Veckans genomgång
 ---------------------------------
 
-Emil har genomgånger måndagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
+Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
 <YouTube posterQuality="max" id="UALaFaipAi4" />
+
+
+
+Veckans föreläsning 
+---------------------------------
+
+Emil har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
+
+<YouTube posterQuality="max" id="sZDvUQbFnTk" />
 
 
 
