--- a/src/content/docs/kmom/kmom02.mdx
+++ b/src/content/docs/kmom/kmom02.mdx
@@ -41,14 +41,14 @@ git checkout -b kmom02
 Veckans genomgång
 ---------------------------------
 
-Emil har genomgånger måndagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
+Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
 
 
 Veckans föreläsning 
 ---------------------------------
 
-Emil och Mathias har föreläsningar onsdagar kl 10:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
+Emil och Mathias har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
 
 
 
