--- a/src/content/docs/uppgift/lager-appen-del-3.mdx
+++ b/src/content/docs/uppgift/lager-appen-del-3.mdx
@@ -33,7 +33,9 @@ Krav
 
 1. Bakom de skyddade delarna ska faktura vyerna ligga.
 
-1. Skapa ett formulär för att göra om en order till en faktura. Ändra orderns status till 'fakturerad' enligt API:t.
+1. Skapa ett formulär för att skapa en faktura utifrån en order. 
+
+1. Ändra orderns status till 'fakturerad' enligt API:t.
 
 1. Det ska inte gå att fakturera en order två gånger.
 
