Done with kmom03 and released

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -29,7 +29,7 @@ Välkommen till kursen Webbapplikationer för mobila enheter.
 />
 
 <LinkCard
-  title="⚠️ kmom03 - Autentisering med JWT"
+  title="kmom03 - Autentisering med JWT"
   href="/kmom/kmom03"
   description="Vi använder JavaScript för att skapa en varukorg och piffa till lite."
 />
