--- a/src/content/docs/kmom/kmom03.mdx
+++ b/src/content/docs/kmom/kmom03.mdx
@@ -13,15 +13,13 @@ revision:
 
 
 import { YouTube } from 'astro-embed';
-import { Aside } from '@astrojs/starlight/components';
 
-<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
 Vi fortsätter med Lager appen och lägger till en funktion för att skapa fakturor utifrån en order. Alla ska inte kunna skapa fakturor så innan vi skapar faktura funktionen skapar vi inloggning och tittar på JSON Web Tokens för autentisering. När man skapar en faktura är det bra att ha snygga och responsiva tabeller, så det ska vi självklart fixa till
 
 Så här kan det se ut när vi är klara.
 
-
+<YouTube posterQuality="max" id="qGmfHJUmH5s" />
 
 
 <small><i>(Detta är instruktionen för kursmomentet och omfattar det som skall göras inom ramen för kursmomentet. Momentet omfattar cirka **20 studietimmar** inklusive läsning, arbete med övningar och uppgifter, felsökning, problemlösning, redovisning och eftertanke. Läs igenom hela kursmomentet innan du börjar jobba. Om möjligt -- planera och prioritera var du vill lägga tiden.)</i></small>
