Added videos to kmom01 och kmom02 pages

--- a/src/content/docs/kmom/kmom02.mdx
+++ b/src/content/docs/kmom/kmom02.mdx
@@ -43,6 +43,8 @@ Veckans genomgång
 
 Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
+<YouTube posterQuality="max" id="n9zb4xbsMSU" />
+
 
 
 Veckans föreläsning 
@@ -50,6 +52,8 @@ Veckans föreläsning
 
 Emil och Mathias har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
 
+<YouTube posterQuality="max" id="HpVpYMhturY" />
+ 
 
 
 Läsanvisningar 
