--- a/src/content/docs/kmom/kmom01.mdx
+++ b/src/content/docs/kmom/kmom01.mdx
@@ -77,12 +77,16 @@ Veckans genomgång
 
 Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
+<YouTube posterQuality="max" id="fhnM0LBeDqA" />
 
+ 
 
 Veckans föreläsning
 ---------------------------------
 
 Emil har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
+
+<YouTube posterQuality="max" id="krPNeKUUjNw" />
 
 
 
